--- a/css/general.css
+++ b/css/general.css
@@ -5,9 +5,12 @@
 body {
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
 }
 
 body::-webkit-scrollbar {
   display: none;
+}
+
+a {
+  text-decoration: none;
 }
