--- a/css/general.css
+++ b/css/general.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  width: 100%;
-  height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 body::-webkit-scrollbar {
@@ -13,4 +13,11 @@ body::-webkit-scrollbar {
 
 a {
   text-decoration: none;
+}
+
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
