--- a/css/general.css
+++ b/css/general.css
@@ -29,6 +29,7 @@ p {
 .txt-s-20 { font-size: 20px; }
 .txt-s-24 { font-size: 24px; }
 .txt-s-36 { font-size: 36px; }
+.txt-s-48 { font-size: 48px; }
 .txt-s-64 { font-size: 64px; }
 
 .txt-w-100 { font-weight: 100; }
