--- a/css/general.css
+++ b/css/general.css
@@ -30,6 +30,7 @@ p {
 .txt-s-24 { font-size: 24px; }
 .txt-s-36 { font-size: 36px; }
 .txt-s-48 { font-size: 48px; }
+.txt-s-60 { font-size: 60px; }
 .txt-s-64 { font-size: 64px; }
 
 .txt-w-100 { font-weight: 100; }
@@ -43,3 +44,5 @@ p {
 .txt-w-900 { font-weight: 900; }
 
 .txt-caption { color: #9F9F9F; }
+
+.block { display: block; }
