--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,21 @@
 .view-more-btn {
   color: black;
-  font-size: 1em;
   font-weight: 500;
-  border-bottom: 0.15rem solid black;
+  border-bottom: 2px solid black;
   padding-bottom: 13px;
+}
+
+.section-title {
+  margin-top: 55px; 
+  font-style: normal;
+  line-height: 54px;
+}
+
+.section-caption {
+  margin-top: 13px; 
+  margin-bottom: 65px;
+  line-height: 24px;
+  color: #9F9F9F;
 }
 
 /*-------------------*/
@@ -84,22 +96,8 @@
   min-height: 777px;
 }
 
-.toppick-title {
-  margin-top: 55px; 
-  font-style: normal;
-  line-height: 54px;
-}
-
-.toppick-caption {
-  margin-top: 13px; 
-  margin-bottom: 65px;
-  line-height: 24px;
-  color: #9F9F9F;
-}
-
 .toppick-ctn a {
   margin: 70px 0px;
-  /* View More */
   line-height: 30px;
 }
 
@@ -111,7 +109,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 640px;
+  min-height: 640px;
   background-color: #FFF9E5;
 }
 
@@ -138,21 +136,95 @@
   font-weight: 400;
   border-width: 1px;
   cursor: pointer;
-  transition: ease-in-out 0.15s;
+  transition: ease-in-out 0.15s ;
 }
 
 .order-btn:hover {
-  transition: ease-in-out 0.15s ;
   background-color: black;
+  transition: ease-in-out 0.15s ;
   color: white;
 }
 
 .new-arrivals-img-ctn {
-  max-height: 100%;
+  height: 100%;
   margin: 15px 0;
   flex: 2;
 }
 
 .new-arrivals-img-ctn img {
   height: 100%;
+}
+
+/*--------------*/
+/* BLOG SECTION */
+/*--------------*/
+.blog-section {
+  display: flex;
+  max-height: 944px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.blogs-view {
+  flex: 1;
+  margin: 0 100px;
+}
+
+.blog-section .view-more-btn {
+  color: black;
+  font-weight: 500;
+}
+
+.button-line {
+  color: black;
+  margin: 20px 10px 0px 10px;
+  border: 1px solid black;
+}
+
+.view-all-btn {
+  margin-top: 75px;
+  margin-bottom: 54px;
+}
+
+/*----------------------*/
+/* SOCIAL MEDIA SECTION */
+/*----------------------*/
+
+.social-media-section {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  min-height: 450px;
+  background-color: #FAF4F47F;
+}
+
+.social-media-img {
+  position: absolute;
+  background-image: url("../assets/imgs/background_follow.jpg");
+  background-position: center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.15;
+  z-index: 0;
+}
+
+.social-media-ctn {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.follow-btn {
+  background-color: #FAF4F4;
+  margin-top: 18px;
+  border-style: none;
+  padding: 17px 81px;
+  border-radius: 27px;
+  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
