update: finalize index.html (homepage)

--- a/css/home.css
+++ b/css/home.css
@@ -18,6 +18,10 @@
   color: #9F9F9F;
 }
 
+sup {
+  font-size: 11px;
+}
+
 /*-------------------*/
 /* THUMBNAIL SECTION */
 /*-------------------*/
@@ -170,8 +174,71 @@
 }
 
 .blogs-view {
-  flex: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 30px;
   margin: 0 100px;
+}
+
+.blog-ctn {
+  text-align: center;
+  width: 393px;
+  height: 555px;
+}
+
+.blog-duration, .blog-date {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.clock-icon {
+  margin-right: 10px;
+  width: 21px;
+  height: 21px;
+}
+
+.calendar-icon {
+  margin-left: 20px;
+  margin-right: 10px;
+  width: 22px;
+  height: 22px;
+}
+
+.blog-title {
+  font-size: 20px;
+}
+
+.read-more-btn {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.read-more-btn a {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.read-more-btn a + hr {
+  box-sizing: border-box;
+  width: 25%;
+  color: black;
+  border: 1px solid black;
+  margin-top: 10px;
+}
+
+.blog-img-ctn {
+  overflow: hidden;
+  max-height: 393px;
+  max-width: 393px;
+  border-radius: 10px;
+  margin-bottom: 33px;
+}
+
+.blog-img-ctn img {
+  transform: translateX(-18%);
+  margin: 0 auto;
+  height: 393px;
 }
 
 .blog-section .view-more-btn {
