--- a/css/singleproduct.css
+++ b/css/singleproduct.css
@@ -5,6 +5,34 @@ input, label {
   user-select: none;
 }
 
+/* BREADCRUMB */
+.breadcrumb {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.breadcrumb-ctn {
+  display: flex;
+  flex-direction: row;
+  column-gap: 25px;
+  margin: 32px 0;
+  margin-left: 100px;
+}
+
+.breadcrumb span {
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumb-ctn span:not(:last-child)::after {
+  content: url('../assets/icons/arrow.svg')
+}
+
+.breadcrumb-ctn a {
+  margin-right: 20px;
+}
+
 .breadcrumb-ctn .product-name {
   border-left: 2px solid #9F9F9F;
   padding-left: 20px;
