--- a/css/shop.css
+++ b/css/shop.css
@@ -1,4 +1,7 @@
 .option-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   box-sizing: border-box;
   background-color: #FAF4F4;
   height: 100px;
@@ -7,4 +10,71 @@
   margin-bottom: 20px;
 }
 
+input[type="radio"] {
+  display: none;
+}
 
+input[type="radio"]:checked {
+
+}
+
+.icon {
+  box-sizing: border-box;
+  width: 25px;
+  height: 25px;
+  border: none;
+  background-color: #00000000;
+  vertical-align: middle;
+}
+
+.option-bar span {
+  vertical-align: middle;
+}
+
+.filter-result {
+  display: inline;
+  margin-left: 30px;
+  padding-left: 34px;
+  padding-top: 7px;
+  padding-bottom: 6px;
+  border-left: 2px solid #9F9F9F;
+}
+
+.show-count-input, .sort-sel {
+  font-size: 20px;
+  height: 55px;
+  box-sizing: border-box;
+  border-color: white;
+  border-style: solid;
+  background-color: white;
+  color: #9F9F9F;
+}
+
+.option-bar div label {
+  display: inline-block;
+  margin-right: 17px;
+  font-size: 20px;
+}
+
+.option-bar div span {
+  margin-left: 12px;
+}
+
+div img:not(:first-of-type) {
+  margin-left: 23px;
+}
+
+.show-count-input {
+  text-align: center;
+  width: 55px;
+}
+
+.sort-sel {
+  min-width: 188px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+div label:not(:first-of-type)  {
+  margin-left: 30px;
+}
