--- a/css/general.css
+++ b/css/general.css
@@ -10,6 +10,10 @@ input[type=number]::-webkit-outer-spin-button {
   color: black;
 }
 
+.txt-center {
+  text-align: center;
+}
+
 body {
   padding: 0;
   margin: 0;
