--- a/css/singleproduct.css
+++ b/css/singleproduct.css
@@ -59,16 +59,36 @@ input, label {
 }
 
 .product-gallery {
-  position: relative;
-  row-gap: 25px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 13px;
   margin-right: 30px;
   width: 76px;
   height: 100%;
-  overflow-y: scroll;
 }
 
 .product-gallery::-webkit-scrollbar {
   display: none;
+}
+
+.slider {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+
+.slide-icon {
+  box-sizing: border-box;
+  width: 29px;
+  height: 29px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #FFF9E5; 
+  border-radius: 15px;
+  text-align: center;
 }
 
 .gallery-slide {
@@ -79,7 +99,10 @@ input, label {
   transition: 0.3s ease-in-out;
 }
 
-.gallery-img-ctn {
+.gallery-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #FFF9E5;
   border-radius: 10px;
   width: 76px;
@@ -88,14 +111,17 @@ input, label {
   z-index: 0;
 }
 
-.gallery-img-ctn img {
+.gallery-item img {
   width: 100%;
   z-index: 0;
 }
 
 .slide-btn {
   box-sizing: border-box;
-  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* position: absolute; */
   border: none;
   width: 100%;
   margin:0;
@@ -106,10 +132,10 @@ input, label {
 }
 
 .gallery-prev {
-  top: 0;
+  /* top: 0; */
 }
 .gallery-next {
-  bottom: 0;
+  /* bottom: 0; */
 }
 
 .main-img-ctn {
@@ -213,8 +239,8 @@ input, label {
 
 input[type="number"] {
   -webkit-appearance: textfield;
-     -moz-appearance: textfield;
-          appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
   width: 100%;
   border: none;
   text-align: center;
