--- a/css/general.css
+++ b/css/general.css
@@ -37,6 +37,7 @@ p {
 .txt-s-16 { font-size: 16px; }
 .txt-s-20 { font-size: 20px; }
 .txt-s-24 { font-size: 24px; }
+.txt-s-32 { font-size: 32px; }
 .txt-s-36 { font-size: 36px; }
 .txt-s-42 { font-size: 42px; }
 .txt-s-48 { font-size: 48px; }
@@ -56,3 +57,32 @@ p {
 .txt-caption { color: #9F9F9F; }
 
 .block { display: block; }
+
+.price-small {
+  font-size: 16;
+  font-weight: 600;
+  color: #B88E2F;
+}
+
+.price-medium {
+  font-size: 20px;
+  font-weight: 600;
+  color: #B88E2F;
+}
+
+.price-large {
+  font-size: 24px;
+  font-weight: 700;
+  color: #B88E2F;
+}
+
+.flex-sb {
+  display: flex;
+  justify-content: space-between;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
