--- a/css/general.css
+++ b/css/general.css
@@ -76,9 +76,24 @@ p {
   color: #B88E2F;
 }
 
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
 .flex-sb {
   display: flex;
   justify-content: space-between;
+}
+
+.flex-middle {
+  display: flex;
+  align-items: center;
 }
 
 .flex-center {
@@ -86,3 +101,5 @@ p {
   justify-content: center;
   align-items: center;
 }
+
+.inline { display: inline }
