--- a/css/singleproduct.css
+++ b/css/singleproduct.css
@@ -302,7 +302,7 @@ input[type="radio"]:checked + .size {
 }
 
 input[type="radio"]:checked + .color {
-  border: 1px solid black;
+  box-shadow: 0 0 5px black;
 }
 
 /* More detail*/
